Pending changes exported from your codespace

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 name = "xor"
 
 [dependencies]
-bevy = { version = "0.14.0", default-features = false }
+# bevy = { version = "0.14.0", default-features = false }
 rand = "0.8.5"
